Primeiro commit sem entrega bonus

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>JS - Katas 03</title>
 </head>
 <body>
+    <main id="documento">
+
+    </main>
     <script src="katas3.js"></script>
 </body>
 </html>
